--- a/index.html
+++ b/index.html
@@ -13,142 +13,209 @@
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 </head>
 <body>
-  <header>
-    <div class="container-fluid header-block">
-      <div class="container title text-center">
-        <div class="row">
-          <div class="col-md-3 schedule">
-            <img src="images/logo_iwf.png" alt="">
-            <hr>
-            <p class="date">19 - 21 мая</p>
-            <p class="button"><a class="btn btn-primary btn-lg" href="#" role="button">Регистрация</a></p>
-          </div>
-          <div class="arrow">
-            <a href="#main">
-              <i class="fa fa-arrow-down"></i>
-            </a>
+  <div class="body"> 
+    <header>
+      <div class="container-fluid header-block">
+        <div class="container title text-center">
+          <div class="row">
+            <div class="col-md-6 col-xs-12">
+              <div class="schedule">
+                <img src="images/logo_iwf.png" alt="">
+                <hr>
+                <p class="date">19 - 21 мая</p>
+                <p class="button"><a class="btn btn-primary btn-lg" href="#" role="button">Регистрация</a></p>
+              </div>
+            </div>
+            <div class="arrow">
+              <a href="#main">
+                <i class="fa fa-arrow-down"></i>
+              </a>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </header>          
-  <main>
-    <div class="container-fluide">
-      <div class="container text-center" id="main">
-        <h2>О проекте</h2>
-        <iframe height="310" src="https://www.youtube.com/embed/HZwhl70568M?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe> 
-        <h1 class="text-center">Мероприятия</h1>
-        <hr>
-      </div>
-      <div class="container events text-left">
-        <div class="row left">
-          <div class="col-md-4 description">
-            <h2>Фестиваль невест</h2>
-            <ul>
-              <li><i class="fa fa-calendar"></i>20.05.2016</li>
-              <li><i class="fa fa-map-marker"></i>Морвокзал, Одесса</li>
-            </ul>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, rerum nemo accusamus recusandae vitae sunt placeat illo amet temporibus dolorum reiciendis odio ut, magnam, itaque ducimus veniam eaque. Cum, beatae?</p>
+    </header>          
+    <main>
+      <div class="container-fluide">
+        <div class="container about text-center" id="main">
+          <h2>О проекте</h2>
+          <iframe height="310" src="https://www.youtube.com/embed/HZwhl70568M?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe> 
+          <h1 class="text-center">Мероприятия</h1>
+          <hr>
+        </div>
+        <div class="container events text-left">
+          <div class="row left">
+            <div class="col-md-12 text-left row">
+              <div class="col-md-6 left">
+                <h2>Битва невест</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum praesentium ab, provident error optio qui sequi a aliquam nemo exercitationem laudantium commodi magni eaque quisquam corporis quos quasi. Blanditiis, quas.</p>
+                <button type="button" class="btn btn-danger" data-toggle="collapse" data-target="#demo">
+                  <span>Читать<i class="fa fa-angle-down"></i></span>
+                </button>
+                <div class="description text-left">
+                  <div id="demo" class="collapse">
+                  <span>19-22.05.16</span>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, rerum nemo accusamus recusandae vitae sunt placeat illo amet temporibus dolorum reiciendis odio ut, magnam, itaque ducimus veniam eaque. Cum, beatae?</p>
+                  <p class="button"><a class="btn btn-primary btn-lg" href="/" role="button">Пойду</a></p>
+                  </div>
+                </div>
+              </div>  
+              <div class="col-md-6">
+                <div class="image text-center">
+                  <img src="images/fighting.png" alt="picture" class="img-circle">
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="col-md-8 image text-left">
-            <img src="images/background-exhibition.png" alt="picture" class="img-circle">
+          <div class="row right">
+            <div class="col-md-12 text-left row">
+              <div class="col-md-6 right">
+                <h2>Парад женихов</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, quibusdam fugiat corporis voluptate id voluptatem. Tempora cupiditate sed, reiciendis obcaecati, molestiae maiores, consequatur necessitatibus incidunt cum itaque rerum quis esse.</p>
+                <button type="button" class="btn btn-danger" data-toggle="collapse" data-target="#demo2">
+                  <span>Читать<i class="fa fa-angle-down"></i></span>
+                </button>
+                <div class="description text-left">
+                  <div id="demo2" class="collapse">
+                    <span>22.05.16</span>
+                    <p>Парад женихов 2016 - это благотворительное социальное мероприятие, которое состоится 22 мая в Одессе в рамках Международный Свадебный Фестиваль</p>
+                    <p class="button"><a class="btn btn-primary btn-lg" href="https://docs.google.com/forms/d/1a3mfmemp8hy8x_VFbR1GJvjIBvNzusOZyx9EKQkB_g8/viewform?c=0&w=1" role="button">Пойду</a></p>
+                   </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="image text-center">
+                  <img src="images/groom.png" alt="picture" class="img-circle">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row left">
+            <div class="col-md-12 text-left row">
+              <div class="col-md-6 left">
+                <h2>Фестиваль невест</h2>
+                <p>Фестиваль Невест – ежегодный праздник весны, красоты и любви. Это не парад и не показ свадебных платьев, это целое действо, которое стоит увидеть каждому! Тематикой Фестиваля Невест-2016 станет - свадьбы стран мира! Окунитесь в атмосферу праздника 7 различных стран: Индии, Испании, Украины, Греции, Франции, Италии, Мексики! 
+                Каждая невеста в любом уголке Света – прекрасна, нежна и неповторима, и мы вам это обязательно покажем! Приходи смотреть и участвовать! В этом году Фестиваль подарит еще больше ярких и незабываемых впечатлений! </p>
+                <button type="button" class="btn btn-danger" data-toggle="collapse" data-target="#demo3">
+                  <span>Читать<i class="fa fa-angle-down"></i></span>
+                </button>
+                <div class="description text-left">
+                  <div id="demo3" class="collapse">
+                    <span>22.05.16</span>
+                    <p>Что такое Фестиваль Невест и как он проходит? 
+                    Многие путают Фестиваль Невест с Парадом Невест. На самом деле, это абсолютно разные два мероприятия. Фестиваль Невест имеет определенную концепцию, тематику и главное – вмещает в себя целый комплекс мероприятий, включающих: награждение победительниц, награждение стилистов и дизайнеров участвующих в битве за создание лучшего образа. Фестиваль также сопровождается Битвой кондитеров, свадебной выставкой и ярмаркой, ценными призами и шоу-программой. В то время как Парад – это своего рода показ невест, идущих по улицам города. 
+                    В 2016 году Фестиваль соберет 84 очаровательных невесты, которые предстанут пред взорами горожан и гостей города в неповторимых образах, созданных профессиональными стилистами и декораторами в соответствующей тематике. В день яркого события по главным улицам проедет невероятный кортеж из свадебных лимузинов и брутальных байков, везущий настоящих принцесс на прогулку в живописные парки города. Головокружительный вальс невест в сопровождении кадетов-моряков можно увидеть только один раз в году и только в Одессе!</p>
+                    <p class="button"><a class="btn btn-primary btn-lg" href="https://docs.google.com/forms/d/1Q_iNst-t-1QDfQ3sHamSZ5AAVLgoqqfaDfUvTF4Gdms/viewform?c=0&w=1" role="button">Пойду</a></p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6 text-center image">
+                <img src="images/background-exhibition.png" alt="picture" class="img-circle">
+              </div>
+            </div>  
+          </div>
+          <div class="row right">
+            <div class="col-md-12 text-left row">
+              <div class="col-md-6 description">
+                <h2>Свадебная ярмарка</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime provident, iste, porro illo atque inventore sint doloremque. Eius fugiat vel sint aliquam debitis soluta, quo aliquid, esse saepe accusamus, quisquam?</p>
+                <button type="button" class="btn btn-danger" data-toggle="collapse" data-target="#demo4">
+                  <span>Читать<i class="fa fa-angle-down"></i></span>
+                </button>
+                <div class="description text-left">
+                  <div id="demo4" class="collapse">
+                    <span>19-22.05.16</span>
+                    <p>ЯРМАРКА WIFE станет ярким праздником красоты, отличного настроения и воодушевляющего шопинга для представительниц прекрасного пола! Ярмарка объединит в нескольких тематических зонах лучших представителей индустрии красоты и здорового питания, мастеров декоративно-прикладного искусства, дизайнеров, декораторов и многих других специалистов, способных сделать образ современной женщины захватывающим, неповторимым и гармоничным!</p>
+                    <p class="button"><a class="btn btn-primary btn-lg" href="https://docs.google.com/forms/d/1UGE-B-XBtCkfbNmZXSMXHwlMc6v0jgD6A2dEe_6weNs/viewform?c=0&w=1" role="button">Пойду</a></p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6 image text-center">
+                <img src="images/background-fair.png" alt="picture" class="img-circle">
+              </div>
+            </div>
+          </div>
+          <div class="row left">
+            <div class="col-md-12 text-left row">
+              <div class="col-md-6">
+                <h2>Свадебная выставка</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, excepturi? Voluptatibus sit quam iste ea nostrum iusto quia, aut recusandae impedit corporis, vel ex, ipsum soluta ullam itaque laudantium id!</p>
+                <button type="button" class="btn btn-danger" data-toggle="collapse" data-target="#demo5">
+                  <span>Читать<i class="fa fa-angle-down"></i></span>
+                </button>
+                <div class="description text-left">
+                  <div id="demo5" class="collapse">
+                    <span>19-22.05.16</span>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, rerum nemo accusamus recusandae vitae sunt placeat illo amet temporibus dolorum reiciendis odio ut, magnam, itaque ducimus veniam eaque. Cum, beatae?</p>
+                    <p class="button"><a class="btn btn-primary btn-lg" href="#" role="button">Пойду</a></p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6 image text-center"> <!--padding-left: 41px-->
+                <img src="images/background-exhibition.png" alt="picture" class="img-circle">
+              </div>
+            </div>
+          </div>
+        </div>  
+        <div class="container partners text-center">
+          <div class=" row">
+            <div class="row col-md-12">
+              <div class="col-md-offset-3 col-md-6 col-md-offset-3">
+                <h2>Партнеры:</h2>
+                <img class="img-circle" src="http://lorempixel.com/60/60?var=74" alt="">
+                <img class="img-circle" src="http://lorempixel.com/60/60?var=22" alt="">
+                <img class="img-circle" src="http://lorempixel.com/60/60?var=87" alt="">
+                <img class="img-circle" src="http://lorempixel.com/60/60?var=23" alt="">
+                <img class="img-circle" src="http://lorempixel.com/60/60?var=12" alt="">
+                <img class="img-circle" src="http://lorempixel.com/60/60?var=47" alt="">
+                <img class="img-circle" src="http://lorempixel.com/60/60?var=45" alt="">
+                <img class="img-circle" src="http://lorempixel.com/60/60?var=63" alt="">
+                <img class="img-circle" src="http://lorempixel.com/60/60?var=58" alt="">
+                <img class="img-circle" src="http://lorempixel.com/60/60?var=14" alt="">
+                <img class="img-circle" src="http://lorempixel.com/60/60?var=12" alt="">
+                <img class="img-circle" src="http://lorempixel.com/60/60?var=19" alt="">
+                <img class="img-circle" src="http://lorempixel.com/60/60?var=27" alt="">
+                <img class="img-circle" src="http://lorempixel.com/60/60?var=19" alt="">
+              </div>
+            </div>
           </div>
         </div>
-        <div class="row right">
-          <div class="col-md-8 image text-right">
-            <img src="images/background-about.png" alt="picture" class="img-circle">
-          </div>
-          <div class="col-md-4 description">
-            <h2>Битва невест</h2>
-            <ul>
-              <li><i class="fa fa-calendar"></i>20.05.2016</li>
-              <li><i class="fa fa-map-marker"></i>Морвокзал, Одесса</li>
-            </ul>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, rerum nemo accusamus recusandae vitae sunt placeat illo amet temporibus dolorum reiciendis odio ut, magnam, itaque ducimus veniam eaque. Cum, beatae?</p>
-          </div>
-        </div>
-        <div class="row left">
-          <div class="col-md-4 description">
-            <h2>Ярмарка</h2>
-            <ul>
-              <li><i class="fa fa-calendar"></i>20.05.2016</li>
-              <li><i class="fa fa-map-marker"></i>Морвокзал, Одесса</li>
-            </ul>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, rerum nemo accusamus recusandae vitae sunt placeat illo amet temporibus dolorum reiciendis odio ut, magnam, itaque ducimus veniam eaque. Cum, beatae?</p>
-          </div>
-          <div class="col-md-8 image text-left"> <!--padding-left: 41px-->
-            <img src="images/background-exhibition.png" alt="picture" class="img-circle">
-          </div>
-        </div>
-        <div class="row right">
-          <div class="col-md-8 image text-right">
-            <img src="images/background-about.png" alt="picture" class="img-circle">
-          </div>
-          <div class="col-md-4 description">
-            <h2>Выставка</h2>
-            <ul>
-              <li><i class="fa fa-calendar"></i>20.05.2016</li>
-              <li><i class="fa fa-map-marker"></i>Морвокзал, Одесса</li>
-            </ul>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, rerum nemo accusamus recusandae vitae sunt placeat illo amet temporibus dolorum reiciendis odio ut, magnam, itaque ducimus veniam eaque. Cum, beatae?</p>
-          </div>
-        </div>
-      </div>  
-      <div class="container">
-        <div class="row information">
-          <div class="partners col-md-5">
-            <h2>Партнеры:</h2>
-            <img class="img-circle" src="http://lorempixel.com/60/60?var=74" alt="">
-            <img class="img-circle" src="http://lorempixel.com/60/60?var=22" alt="">
-            <img class="img-circle" src="http://lorempixel.com/60/60?var=87" alt="">
-            <img class="img-circle" src="http://lorempixel.com/60/60?var=23" alt="">
-            <img class="img-circle" src="http://lorempixel.com/60/60?var=12" alt="">
-            <img class="img-circle" src="http://lorempixel.com/60/60?var=47" alt="">
-            <img class="img-circle" src="http://lorempixel.com/60/60?var=45" alt="">
-            <img class="img-circle" src="http://lorempixel.com/60/60?var=63" alt="">
-            <img class="img-circle" src="http://lorempixel.com/60/60?var=58" alt="">
-            <img class="img-circle" src="http://lorempixel.com/60/60?var=14" alt="">
-            <img class="img-circle" src="http://lorempixel.com/60/60?var=12" alt="">
-            <img class="img-circle" src="http://lorempixel.com/60/60?var=19" alt="">
-            <img class="img-circle" src="http://lorempixel.com/60/60?var=27" alt="">
-            <img class="img-circle" src="http://lorempixel.com/60/60?var=19" alt="">
-          </div>
           <div class="col-md-3">
-          </div>
-          <div class="contacts col-md-4">
-            <h2>Контакты:</h2>
-            <div class="row">
-                <div class="col-xs-12 item">
-                  <span class="glyphicon glyphicon-map-marker"></span>
-                  <i>84 Street, City, State 24813</i>
-                </div>
             </div>
-            <div class="row">
-                <div class="col-xs-12 item">
-                  <span class="glyphicon glyphicon-envelope"></span>
-                  <i>mr.kru.v@gmail.com</i>
-                </div>
+            <div class="contacts col-md-4">
+              <h2>Контакты:</h2>
+              <div class="row">
+                  <div class="col-xs-12 item">
+                    <span class="glyphicon glyphicon-map-marker"></span>
+                    <i>84 Street, City, State 24813</i>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col-xs-12 item">
+                    <span class="glyphicon glyphicon-envelope"></span>
+                    <i>mr.kru.v@gmail.com</i>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col-xs-12 item">
+                    <span class="glyphicon glyphicon-phone"></span>
+                    <i>0666911504</i>
+                  </div>
+              </div>
             </div>
-            <div class="row">
-                <div class="col-xs-12 item">
-                  <span class="glyphicon glyphicon-phone"></span>
-                  <i>0666911504</i>
-                </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </main>	
-  <footer>
-   	<div class="footer-body">
-   		<div class="container">
-   			<div class="collapse navbar-collapse text-center footer-line">
-   				<span>Event-studio «Династия» 2011-2025 &copy;. Все права защищены.</span>
-   			</div>
-    	</div>
-    </div> 
-  </footer>
+
+      </div>  
+    </main>	
+    <footer>
+     	<div class="footer-body">
+     		<div class="container">
+     			<div class="collapse navbar-collapse text-center footer-line">
+     				<span>Event-studio «Династия» 2011-2025 &copy;. Все права защищены.</span>
+     			</div>
+      	</div>
+      </div> 
+    </footer>
+  </div>  
 
 
 
